--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: line_dot_dot
 description: A command line interaction toolkit.
 version: 0.0.1
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/louiskhchan/line_dot_dot
 
 environment:
   sdk: ^3.1.2
 
 # Add regular dependencies here.
-dependencies:
-  # path: ^1.8.0
+# dependencies:
+# path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
