--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: line_dot_dot
 description: A command line interaction toolkit.
-version: 0.0.4
+version: 0.1.0
 repository: https://github.com/louiskhchan/line_dot_dot
 
 environment:
@@ -13,3 +13,5 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+dependencies:
+  rxdart: ^0.27.7
